--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,14 @@
 footer {
   background-color: #21283c;
-  color: #9E9E9E;
+  color: #9e9e9e;
   font-family: var(--source-font);
 }
 
-footer p , a, li {
-    font-size: 14px;
-    padding: .2rem 0;
+footer p,
+a,
+li {
+  font-size: 14px;
+  padding: 0.2rem 0;
 }
 
 .top-footer {
@@ -17,59 +19,59 @@ footer p , a, li {
 }
 
 .footer-item {
-    padding: 1.5rem 0;
+  padding: 1.5rem 0;
 }
 
 .footer-1 img {
-    width: 50px;
+  width: 50px;
 }
 
 .footer-1-item {
-    display: flex;
+  display: flex;
 }
 
 .footer-2 {
-    width: 10%;
+  width: 10%;
 }
 
 .footer-2 li:hover {
-    color: var(--blue-color);
-    transition: var(--transition);
+  color: var(--blue-color);
+  transition: var(--transition);
 }
 
 .footer-3 {
-    width: 15%;
+  width: 15%;
 }
 
 .footer-header {
-    color: var(--white-color);
-    position: relative;
+  color: var(--white-color);
+  position: relative;
 }
 
 .footer-header::after {
-    content: "";
-    left: 0;
-    bottom: -10px;
-    position: absolute;
-    width: 25%;
-    border-bottom: 1px solid var(--white-color);
+  content: "";
+  left: 0;
+  bottom: -10px;
+  position: absolute;
+  width: 25%;
+  border-bottom: 1px solid var(--white-color);
 }
 
 .footer-4 {
-    width: 30%;
+  width: 30%;
 }
 
 .tags {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1rem 0;
 }
 
 .tag {
-    border: 1px solid #9E9E9E;
-    text-align: center;
-    margin: .4rem;
-    padding: .2rem .5rem;
+  border: 1px solid #9e9e9e;
+  text-align: center;
+  margin: 0.4rem;
+  padding: 0.2rem 0.5rem;
 }
 
 .bottom-footer {
@@ -83,5 +85,29 @@ footer p , a, li {
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 1rem 0 0 0;
-  color: #9E9E9E;
+  color: #9e9e9e;
+}
+
+@media screen and (max-width: 800px) {
+  .top-footer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+  }
+
+  .footer-1, .footer-2, .footer-3, .footer-4 {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .top-footer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 10px;
+  }
+
+  .footer-1, .footer-2, .footer-3, .footer-4 {
+    width: 90%;
+  }
 }
