--- a/src/components/home/Contact.css
+++ b/src/components/home/Contact.css
@@ -1,4 +1,3 @@
-
 .contact-section {
   font-family: var(--source-font);
   padding: 5rem 0;
@@ -30,10 +29,24 @@ input {
   padding: 1rem;
 }
 
-input, textarea {
+input,
+textarea {
   border: 1px solid #d6d6d6;
 }
 
-input::placeholder, textarea::placeholder {
+input::placeholder,
+textarea::placeholder {
   color: #d6d6d6;
+}
+
+@media screen and (max-width: 1024px) {
+  .form-section {
+    margin: 2rem 10rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .form-section {
+    margin: 2rem 2rem;
+  }
 }
