--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -55,6 +55,7 @@
 
 .about-section-left h2 {
   position: relative;
+  text-align: left;
 }
 
 .about-section-left h2::before {
@@ -102,9 +103,8 @@
 
 .we-do-items {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 2rem 9rem;
-  flex-wrap: wrap;
 }
 
 .products-section {
@@ -207,7 +207,7 @@
 
 .partners-right img {
   width: 100%;
-  height: 380px;
+  height: 420px;
   object-fit: cover;
 }
 
@@ -244,4 +244,109 @@
   width: 50%;
   height: 100%;
   object-fit: cover;
+}
+
+@media screen and (max-width: 1024px) {
+  .about-section-left {
+    padding: 3rem 4rem 3rem 4rem;
+  }
+
+  .we-do-items {
+    margin: 2rem 3rem;
+    flex-wrap: wrap;
+  }
+
+  .products {
+    margin: 4rem 2rem;
+  }
+
+  .product-card {
+    width: 300px;
+    margin: 0 0.5rem;
+  }
+
+  .blogs {
+    margin: 4rem 2rem;
+    flex-wrap: wrap;
+  }
+
+  .blog-card {
+    width: 300px;
+    margin: 0 0.5rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .products {
+    margin: 4rem 2rem;
+  }
+
+  .product-card {
+    width: 90%;
+    height: 450px;
+    margin: 0.5rem 0.5rem;
+  }
+
+  .blogs {
+    margin: 4rem 2rem;
+    flex-wrap: wrap;
+  }
+
+  .blog-card {
+    width: 90%;
+    margin: 0.5rem 1rem;
+  }
+
+  .blog-card-img {
+    height: 360px;
+  }
+
+  .blog-card-img img {
+    height: 100%;
+  }
+
+  .card-do-item {
+    width: 100%;
+  }
+
+  .we-do-items {
+    margin: 2rem 2rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .home-section-left {
+    width: 90%;
+  }
+
+  .home-section-left h3 {
+    font-size: 50px;
+    width: 80%;
+  }
+
+  .home-section-left p {
+    width: 90%;
+  }
+
+  .about-section-right {
+    display: none;
+  }
+
+  .about-section {
+    display: block;
+  }
+
+  .about-section-left {
+    width: 100%;
+    padding: 3rem 4rem 3rem 2rem;
+    height: 100%;
+  }
+
+  .categories {
+    flex-direction: column;
+  }
+
+  .partners-right {
+    display: none;
+  }
 }
