--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 }
 
 :root {
+  --main-color: #AB0E12;
+  --ash-color: #7D7C7C
   --primary-color: #4e4343;
   --secondary-color: #e86257;
   --white-color: #ffffff;
