--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -22,6 +22,7 @@ nav {
   align-items: center;
   margin-top: 1rem;
   transition: var(--transition);
+  padding: 0 8rem;
 }
 
 .scroll-nav-links a {
@@ -36,7 +37,7 @@ nav {
 }
 
 .links a {
-  font-size: 12px;
+  font-size: 14px;
   padding: 30px 15px;
   color: var(--white-color);
   text-decoration: none;
@@ -46,12 +47,13 @@ nav {
   color: var(--white-color);
 }
 
-.nav-socials {
-  margin-top: -0.5rem;
-}
-
-.nav-socials a {
-  padding: 0.7rem;
+.contact-btn button {
+  background-color: #AB0E12;
+  outline: none;
+  border: 1px solid black;
+  border-radius: .2rem;
+  color: var(--white-color);
+  padding: .5rem 2rem;
 }
 
 .nav-bars {
