--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: #21283c;
+  background-color: #263238;
   color: #9e9e9e;
   font-family: var(--source-font);
 }
@@ -13,17 +13,21 @@ li {
 
 .top-footer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
-  padding: 2rem 0;
-}
-
-.footer-item {
-  padding: 1.5rem 0;
+  padding: 3rem 0;
 }
 
 .footer-1 img {
-  width: 50px;
+  width: 100px;
+}
+
+.footer-1 {
+  width: 30%;
+}
+
+.footer-1 p {
+  padding: 1rem 0 0 0;
 }
 
 .footer-1-item {
@@ -35,7 +39,7 @@ li {
 }
 
 .footer-2 li:hover {
-  color: var(--blue-color);
+  color: var(--white-color);
   transition: var(--transition);
 }
 
@@ -45,39 +49,15 @@ li {
 
 .footer-header {
   color: var(--white-color);
-  position: relative;
-}
-
-.footer-header::after {
-  content: "";
-  left: 0;
-  bottom: -10px;
-  position: absolute;
-  width: 25%;
-  border-bottom: 1px solid var(--white-color);
 }
 
 .footer-4 {
   width: 30%;
 }
 
-.tags {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 1rem 0;
-}
-
-.tag {
-  border: 1px solid #9e9e9e;
-  text-align: center;
-  margin: 0.4rem;
-  padding: 0.2rem 0.5rem;
-}
-
 .bottom-footer {
-  background-color: #121725;
-  color: var(--white-color);
-  padding: 2rem 0;
+  background-color: var(--main-color);
+  padding: .5rem 0;
 }
 
 .bottom {
@@ -86,6 +66,8 @@ li {
   flex-wrap: wrap;
   padding: 1rem 0 0 0;
   color: #9e9e9e;
+  color: var(--white-color);
+
 }
 
 @media screen and (max-width: 800px) {
