--- a/src/components/home/Blog.css
+++ b/src/components/home/Blog.css
@@ -1,7 +1,6 @@
 .blog-card {
-  width: 320px;
-  font-family: var(--poppins-font);
-  background-color: var(--white-color);
+  width: 300px;
+  transition: var(--transition);
 }
 
 .blog-card:hover img {
@@ -11,56 +10,38 @@
 
 .blog-card-img {
   overflow: hidden;
-  transition: var(--transition);
 }
 
 .blog-card-img img {
   width: 100%;
   object-fit: cover;
   height: 200px;
+  transition: var(--transition);
 }
 
 .blog-card-desc {
-  padding: 40px;
+  padding: 2rem 0;
 }
 
 .blog-card-desc p {
-  font-size: 14px;
-  font-weight: 600;
+  color: var(--ash-color);
+  font-size: 15px;
 }
 
 .blog-card-desc h6 {
-  font-size: 10px;
-  color: var(--blue-color);
+  font-size: 12px;
+  color: var(--main-color);
 }
 
-.horizontal-line {
-  border-bottom: 1px solid #9e9e9e;
-  padding-top: 1rem;
+.blog-card-desc button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  border-radius: 0.2rem;
+  color: var(--main-color);
+  padding: 0.5rem 0;
 }
 
 .blogs-section {
   padding: 5rem 0;
-  background-color: #eeeeee;
-}
-
-.blog-extra {
-  display: flex;
-  color: #9e9e9e;
-  margin-top: 1rem;
-}
-
-.blog-extra span {
-  font-size: 10px;
-  padding-right: 0.5rem;
-}
-
-.blog-message span:hover {
-  color: var(--blue-color);
-  transition: var(--transition);
-  cursor: pointer;
-}
-
-.blog-extra a {
-  font-size: 8px;
 }
