--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
 
 :root {
   --main-color: #AB0E12;
-  --ash-color: #7D7C7C
+  --ash-color: #7D7C7C;
+  --light-color: #FCFCFC;
   --primary-color: #4e4343;
   --secondary-color: #e86257;
   --white-color: #ffffff;
