--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,6 @@
 footer {
   background-color: #263238;
-  color: #9e9e9e;
-  font-family: var(--source-font);
+  color: var(--white-color);
 }
 
 footer p,
@@ -32,6 +31,7 @@ li {
 
 .footer-1-item {
   display: flex;
+  align-items: center;
 }
 
 .footer-2 {
@@ -48,7 +48,8 @@ li {
 }
 
 .footer-header {
-  color: var(--white-color);
+  font-weight: 600;
+  font-size: 16px;
 }
 
 .footer-4 {
