--- a/src/components/home/Testimonial.css
+++ b/src/components/home/Testimonial.css
@@ -1,10 +1,13 @@
 .testimony-card {
   text-align: center;
   padding: 2rem 0;
+  margin: 3rem 8rem;
+  background-color: var(--white-color);
+  border-radius: 0.6rem;
 }
 
 .testimony-desc {
-  padding: 2rem 9rem;
+  padding: 2rem 4rem;
 }
 
 .testimony-desc p {
@@ -16,19 +19,26 @@
   color: var(--main-color);
 }
 
-.img-wrapper img {
+.testimony-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.testimony-img img {
   border: 3px solid var(--main-color);
   border-radius: 50%;
-  padding: 0.5rem;
-  margin: 1rem 43%;
+  padding: 0.3rem;
 }
 
 @media screen and (max-width: 800px) {
-  .testimony-desc {
-    padding: 2rem 2rem;
+  .testimony-card {
+    padding: 2rem 0;
+    margin: 3rem 2rem;
   }
 
-  .img-wrapper img {
-    margin: 1rem 33%;
+  .testimony-desc {
+    padding: 2rem 2rem;
   }
 }
