--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,11 +3,15 @@ nav {
   top: 0;
   height: 5rem;
   width: 100vw;
-  z-index: 11;
+  z-index: 1;
   background: transparent;
   transition: var(--transition);
   display: flex;
   justify-content: space-around;
+}
+
+.links.scroll a.active, nav a.active {
+  color: var(--main-color);
 }
 
 .nav-section {
@@ -64,10 +68,6 @@ nav {
   border: none;
 }
 
-.links a:active {
-  color: var(--main-color);
-}
-
 @media screen and (max-width: 1024px) {
   .nav-bars {
     display: block;
@@ -78,7 +78,7 @@ nav {
     position: fixed !important;
     top: 0;
     height: 5rem;
-    width: 100vw;
+    width: 100%;
     transition: var(--transition);
   }
 
