--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -399,6 +399,10 @@
   }
 }
 
+.active {
+  color: var(--main-color);
+}
+
 @media screen and (max-width: 600px) {
   .home-section-left h3 {
     font-size: 40px;
